--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
 title: Your awesome title
-email: your-email@domain.com
+email: scott@swilson.id.au
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://swilson.id.au" # the base hostname & protocol for your site
+twitter_username: swilsonau
+github_username:  sa-wilson
 
 # Build settings
 markdown: kramdown
